--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
@@ -34,7 +34,7 @@ maalr.login.linkedin=Sign in with LinkedIn
 maalr.login.twitter=Sign in with Twitter
 maalr.login.facebook=Sign in with Facebook
 maalr.login.persona=Sign in with Persona
-maalr.index_page.title=Start page
+maalr.index_page.title=DEVOCHDELI
 maalr.login_page.title=Login
 maalr.dict_title={0} Dictionary
 maalr.dict_title_ext={0} Dictionary - '{1}' to '{2}'
@@ -43,11 +43,7 @@ maalr.footer.maalr=Provided by Maalr
 maalr.footer.uni_cologne=University of Cologne
 maalr.index.last_update=Last Modified: {0}
 maalr.index.entry_count={0} Entries
-maalr.langSelect.romansh=romansh
-maalr.langSelect.russian=russian
-maalr.langSelect.german=german
-maalr.langSelect.english=english
-maalr.indexLang.romansh=romansh
-maalr.indexLang.russian=russian
-maalr.indexLang.german=german
-maalr.indexLang.english=english
+maalr.langSelect.spanish=Spanish
+maalr.langSelect.english=English
+maalr.indexLang.english=English
+maalr.indexLang.spanish=Spanish
