--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
@@ -47,3 +47,5 @@ maalr.langSelect.spanish=Spanish
 maalr.langSelect.english=English
 maalr.indexLang.english=English
 maalr.indexLang.spanish=Spanish
+maalr.indexLang.lemma=Lema
+maalr.indexLang.content=Contenido
