--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
@@ -46,3 +46,5 @@ maalr.langSelect.spanish=español
 maalr.langSelect.english=inglés
 maalr.indexLang.spanish=español
 maalr.indexLang.english=inglés
+maalr.indexLang.lemma=Lemma
+maalr.indexLang.content=Content
