--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -15,6 +15,7 @@ description.suggest=
 dialog.saving=Guardando...
 dialog.failure=No pudimos guardar su propuesta
 dialog.success=Muchas gracias!
+dialog.bad=Eso no se hace!
 dialog.comment.header=Preguntas o comentarios
 dialog.comment.placeholder=Escriba en este campo sus preguntas o comentarios. Si sedes ser contactado por correo electrónico, escriba su dirección 
 dialog.email.header=Correo electrónico
