--- a/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
@@ -14,6 +14,7 @@ description.modify=Use this form for editing an entry. If you want to be contact
 description.suggest=
 dialog.saving=Saving...
 dialog.failure=Your suggestion could not be modify
+dialog.bad=Bad boy!
 dialog.success=Thank you!
 dialog.comment.header=Comments or questions
 dialog.comment.placeholder=Use this field for letting us know your questions or comments. If you want to be contacted per e-mail, give us your address
@@ -28,7 +29,6 @@ maalr.query.results_last_page=Last
 english=English
 spanish=Spanish
 maalr.query.result_title=Results for {0}
-
 
 editor.modify.subtitle=Edit entry
 editor.suggest.subtitle=
