--- a/maalr.lenz/maalr_config/i18n/user-searchui_en.properties
+++ b/maalr.lenz/maalr_config/i18n/user-searchui_en.properties
@@ -3,7 +3,7 @@ searchPhrase_submit=Search
 highlight=Highlight search term
 suggestions=Show edited entries
 
-language=Language
+language=Search over:
 lemma=Lemma
 content=Content
 both=Both
