--- a/maalr.lenz/maalr_config/i18n/user-searchui_es.properties
+++ b/maalr.lenz/maalr_config/i18n/user-searchui_es.properties
@@ -4,7 +4,7 @@ highlight=Destacar búsqueda
 suggestions=Mostrar entradas editadas
 
 
-language=idioma
+language=Buscar en:
 lemma=lema
 content=contenido
 english=inglés
