i18n labels for LemmaEditorWidget

--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -1,6 +1,6 @@
 lemma=Lema
 content=Contenido
-
+correction=Correción
 
 redirect_b=Enlace
 suggest.title=Falta algo?
@@ -19,7 +19,7 @@ dialog.bad=Eso no se hace!
 dialog.comment.header=Preguntas o comentarios
 dialog.comment.placeholder=Escriba en este campo sus preguntas o comentarios. Si sedes ser contactado por correo electrónico, escriba su dirección 
 dialog.email.header=Correo electrónico
-dialog.email.placeholder=Escriba su dirección de correo electrónico aquí
+dialog.email.placeholder=Escriba su dirección de correo electrónico aquí­
 maalr.query.results={0} (Resultados {1} de {2} a {3})
 maalr.query.nothing_found=La búsqueda de "{0}" no entregó resultados
 maalr.query.result_modify=Editar
@@ -29,6 +29,9 @@ maalr.query.results_last_page=Última
 english=inglés
 spanish=español
 maalr.query.result_title=Resultados para {0}
+
+
+
 
 
 editor.modify.subtitle=Editar entrada
