--- a/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
@@ -30,6 +30,8 @@ english=English
 spanish=Spanish
 maalr.query.result_title=Results for {0}
 
+correction.wrongvalue=Submit a value between 15 and 100
+
 editor.modify.subtitle=Edit entry
 editor.suggest.subtitle=
 editor.suggest.title=New Entry
