--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -30,7 +30,7 @@ english=inglés
 spanish=español
 maalr.query.result_title=Resultados para {0}
 
-
+correction.wrongvalue=Ingrese un valor entre 15 y 100
 
 
 
