values for new buttons

--- a/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
@@ -15,6 +15,8 @@ description.suggest=
 dialog.saving=Saving...
 dialog.failure=Your suggestion could not be modify
 dialog.bad=Bad boy!
+dialog.nochanges=No changes have been made!
+dialog.nocorrection=There is no new correction value!
 dialog.success=Thank you!
 dialog.comment.header=Comments or questions
 dialog.comment.placeholder=Use this field for letting us know your questions or comments. If you want to be contacted per e-mail, give us your address
@@ -23,6 +25,7 @@ dialog.email.placeholder=Write your e-mail address here
 maalr.query.results={0} (Results {1} from {2} to {3})
 maalr.query.nothing_found=Searching after "{0}" returned no results
 maalr.query.result_modify=Edit
+maalr.query.result_see_source=Source
 suggest.button=Propose
 maalr.query.results_first_page=First
 maalr.query.results_last_page=Last
