--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -14,8 +14,10 @@ description.modify=Use este formulario para editar una entrada. Si quiere que le
 description.suggest=
 dialog.saving=Guardando...
 dialog.failure=No pudimos guardar su propuesta
-dialog.success=Muchas gracias!
-dialog.bad=Eso no se hace!
+dialog.success=¡Muchas gracias!
+dialog.bad=¡Eso no se hace!
+dialog.nochanges=¡No se han registrado cambios!
+dialog.nocorrection=¡Ha olvidado escribir el porcentaje de corrección!
 dialog.comment.header=Preguntas o comentarios
 dialog.comment.placeholder=Escriba en este campo sus preguntas o comentarios. Si sedes ser contactado por correo electrónico, escriba su dirección 
 dialog.email.header=Correo electrónico
@@ -23,6 +25,8 @@ dialog.email.placeholder=Escriba su dirección de correo electrónico aquí­
 maalr.query.results={0} (Resultados {1} de {2} a {3})
 maalr.query.nothing_found=La búsqueda de "{0}" no entregó resultados
 maalr.query.result_modify=Editar
+maalr.query.result_see_source=Fuente
+
 suggest.button=Proponer
 maalr.query.results_first_page=Primera
 maalr.query.results_last_page=Última
