text.properties updated with strings for about.jsp

--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
@@ -13,7 +13,7 @@ maalr.navi.search=Buscar
 maalr.navi.dictionary=Diccionario
 maalr.navi.help=Ayuda
 maalr.navi.info=Info
-maalr.navi.template=Template
+maalr.navi.about=Acerca del DEVOCHDELI
 maalr.navi.plugin=Plug-In
 maalr.navi.grammatica=Gramática
 maalr.navi.suggest=Nueva Entrada
@@ -48,3 +48,14 @@ maalr.indexLang.spanish=español
 maalr.indexLang.english=inglés
 maalr.indexLang.lemma=Lemma
 maalr.indexLang.content=Content
+
+main.title=Acerca del DEVOCHDELI
+main.content=This webiste holds an electronic version of the 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas' (DEVOCHDELI) composed by Rudolf Lenz.<br> A printed version from 1910 was <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitized</a>, OCR read and partially corrected.<br>DEVOCHDELI contains 1661 entries and the first 1000 were corrected by only one person. <br><br>There are 661 anxiously waiting to be modified!
+
+entry.title=Entry's structure
+entry.img=Figure 1 - The entry 'cuico' in DEVOCHDELI
+entry.explanation=An entry can be divided into four columns:<br><ul><li>On the first column (1) you can see the lemma of an entry.</li> <li>On the second column (2) you can see the content of an entry</li> <li>On the third column (3) on an orange square the percentage of correction of an entry</li> <li>On the fourth column (4) a button for editing the entry</li><li>On the fifth column (5) a button for seeing the scans of the original printed version related to the entry</li> </ul>
+
+edit.title=Editing an entry
+edit.img=Figure 2 - DEVOCHDELI entry's editor
+edit.explanation=After clicking on the button for editing an entry ((4) on Figure 2) you will see the editor on a popup window.<br> The you can edit the fields Lemma and Content. For editing in content you can use the edit-bar above the field.<br> If you make any changes, you need to set a new correction value, that has to be between 15 and 100. 15 represents the lowest scale of correction and 100 the highest.<br> If you don't set a new correction value, you changes will not be saved.
