--- a/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
@@ -14,6 +14,8 @@ description.modify=Use this form for editing an entry. If you want to be contact
 description.suggest=
 dialog.saving=Saving...
 dialog.failure=Your suggestion could not be modify
+dialog.failure.lemma=Your suggestion is too long! 
+dialog.failure.comment=Your comment is too long!
 dialog.bad=Bad boy!
 dialog.nochanges=No changes have been made!
 dialog.nocorrection=There is no new correction value!
