--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -14,6 +14,8 @@ description.modify=Use este formulario para editar una entrada. Si quiere que le
 description.suggest=
 dialog.saving=Guardando...
 dialog.failure=No pudimos guardar su propuesta
+dialog.failure.lemma=Su modificación excede la cantidad de caracteres permitidos
+dialog.failure.comment= su comentario no puede exceder 500 caracteres!
 dialog.success=¡Muchas gracias!
 dialog.bad=¡Eso no se hace!
 dialog.nochanges=¡No se han registrado cambios!
