--- a/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
@@ -16,7 +16,8 @@ dialog.saving=Saving...
 dialog.failure=Your suggestion could not be modify
 dialog.failure.lemma=Your suggestion is too long! 
 dialog.failure.comment=Your comment is too long!
-dialog.bad=Bad boy!
+dialog.bad=What are you trying to submit?
+dialog.bad.less=You are not trying to help!
 dialog.nochanges=No changes have been made!
 dialog.nocorrection=There is no new correction value!
 dialog.success=Thank you!
