--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -17,7 +17,8 @@ dialog.failure=No pudimos guardar su propuesta
 dialog.failure.lemma=Su modificación excede la cantidad de caracteres permitidos
 dialog.failure.comment= su comentario no puede exceder 500 caracteres!
 dialog.success=¡Muchas gracias!
-dialog.bad=¡Eso no se hace!
+dialog.bad=¿Qué quiere hacer?
+dialog.bad.less=¡Usted no está ayudando!
 dialog.nochanges=¡No se han registrado cambios!
 dialog.nocorrection=¡Ha olvidado escribir el porcentaje de corrección!
 dialog.comment.header=Preguntas o comentarios
