--- a/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_en.properties
@@ -10,7 +10,7 @@ modify.subtext=You can modify this entry
 button.clear=Reset
 button.cancel=Cancel
 button.ok=OK
-description.modify=Use this form for editing an entry. If you want to be contacted by us, please give us your e-mail
+description.modify=Use this form for editing an entry. If you want to be contacted by us, please write your e-mail at the end of this form
 description.suggest=
 dialog.saving=Saving...
 dialog.failure=Your suggestion could not be modify
