--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -10,7 +10,7 @@ modify.subtext=Puede modificar la entrada
 button.clear=Anular
 button.cancel=Cancelar
 button.ok=OK
-description.modify=Use este formulario para editar una entrada. Si quiere que le contactemos, por favor, escriba su dirección de correo electrónico
+description.modify=Use este formulario para editar una entrada. Si quiere entrar en contacto con nosotros, escriba su e-mail al final del formulario.
 description.suggest=
 dialog.saving=Guardando...
 dialog.failure=No pudimos guardar su propuesta
