--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
@@ -38,7 +38,7 @@ maalr.login_page.title=Iniciar sesión
 maalr.dict_title={0} Diccionario
 maalr.dict_title_ext={0} Diccionario - '{1}' a '{2}'
 maalr.dict.entry_header=Traduciones de
-maalr.footer.maalr=MAALR
+maalr.footer.maalr=Maalr
 maalr.footer.uni_cologne=Universidad de Colonia
 maalr.index.last_update=Modificado por última vez: {0}
 maalr.index.entry_count={0} Entradas
