--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
@@ -39,7 +39,7 @@ maalr.login_page.title=Login
 maalr.dict_title={0} Dictionary
 maalr.dict_title_ext={0} Dictionary - '{1}' to '{2}'
 maalr.dict.entry_header=Translations of
-maalr.footer.maalr=Provided by Maalr
+maalr.footer.maalr=Maalr
 maalr.footer.uni_cologne=University of Cologne
 maalr.index.last_update=Last Modified: {0}
 maalr.index.entry_count={0} Entries
