--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
@@ -13,7 +13,7 @@ maalr.navi.search=Buscar
 maalr.navi.dictionary=Diccionario
 maalr.navi.help=Ayuda
 maalr.navi.info=Info
-maalr.navi.about=Acerca del DEVOCHDELI
+maalr.navi.about=Acerca del DEVOCHDELIA
 maalr.navi.plugin=Plug-In
 maalr.navi.grammatica=Gramática
 maalr.navi.suggest=Nueva Entrada
@@ -33,7 +33,7 @@ maalr.login.linkedin=Iniciar Sesión con LinkedIn
 maalr.login.twitter=Iniciar Sesión con Twitter
 maalr.login.facebook=Iniciar Sesión con Facebook
 maalr.login.persona=Iniciar Sesión con Persona
-maalr.index_page.title=DEVOCHDELI
+maalr.index_page.title=DEVOCHDELIA
 maalr.login_page.title=Iniciar sesión
 maalr.dict_title={0} Diccionario
 maalr.dict_title_ext={0} Diccionario - '{1}' a '{2}'
@@ -49,13 +49,13 @@ maalr.indexLang.english=inglés
 maalr.indexLang.lemma=Lemma
 maalr.indexLang.content=Content
 
-main.title=Acerca del DEVOCHDELI
-main.content=This webiste holds an electronic version of the 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas' (DEVOCHDELI) composed by Rudolf Lenz.<br> A printed version from 1910 was <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitized</a>, OCR read and partially corrected.<br>DEVOCHDELI contains 1661 entries... TODO
+main.title=Acerca del DEVOCHDELIA
+main.content= Este sitio web contiene una versión electrónica del 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas Americanas' (DEVOCHDELIA) redactado por <a href='https://es.wikipedia.org/wiki/Rodolfo_Lenz'>Rodolfo Lenz</a>.<br> Una edición impresa en 1910 ha sido <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitalizada</a>, sus caracteres reconocidos (OCR) y parcialmente corregida.<br>DEVOCHDELIA contiene 1661 entradas. 1000 han sido parcialmente corregidas y el resto está esperando a ser completamente corregidas.
 
-entry.title=Structure of an entry
-entry.img=Figure 1 - The entry'cuico' in DEVOCHDELI
-entry.explanation=An entry can be divided into four columns:<br><br><ul><li>On the first column (1) you can see the lemma of an entry.</li> <li>On the second column (2) you can see the content of an entry</li> <li>On the third column (3) on an orange square the percentage of correction of an entry</li> <li>On the fourth column (4) a button for editing the entry</li><li>On the fifth column (5) a button for seeing the scans of the original printed version related to the entry</li> </ul>
+entry.title=Estructura de una entrada
+entry.img=Figure 1 - La entrada 'cuico' en DEVOCHDELIA
+entry.explanation=Una entrada puede ser dividida en cinco columnas:<br><br><ul><li>La primera columna (1) contiene el lema</li> <li>En la segunda columna (2) puede ver el contenido</li> <li>La tercera columna (3) contiene el porcentaje de corrección</li> <li>La cuarta columna (4) contiene el botón para abrir el editor de entradas</li><li>La quinta columna (5) contiene el botón para acceder a la imagen de la versión impresa</li> </ul>
 
-edit.title=Editing an entry
-edit.img=Figure 2 - DEVOCHDELI entry's editor
-edit.explanation=After clicking on the button for editing an entry ((4) on Figure 2) you will see the editor on a popup window.<br> The you can edit the fields Lemma and Content. For editing in content you can use the edit-bar above the field.<br> If you make any changes, you need to set a new correction value, that has to be between 15 and 100. 15 represents the lowest scale of correction and 100 the highest.<br> If you don't set a new correction value, your changes will not be saved.
+edit.title=Editar una entrada
+edit.img=Figure 2 - Editor de entradas del DEVOCHDELIA
+edit.explanation=Una vez abierto el editor, puede editar los campos que contienen el lema y el contenido. Para editar el contenido, puede usar la barra de herramientas de texto.<br>Si realiza cambios, tiene que ingresar un nuevo valor de corrección en un rango entre 15 y 100.<br> <b>¡Si no ingresa un nuevo valor de corrección, sus modificaciones no serán guardadas!</b>
