--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
@@ -13,7 +13,7 @@ maalr.navi.search=Search
 maalr.navi.dictionary=Dictionary
 maalr.navi.help=Help
 maalr.navi.info=Info
-maalr.navi.about=About DEVOCHDELI
+maalr.navi.about=About DEVOCHDELIA
 maalr.navi.plugin=Plug-In
 maalr.navi.grammatica=Grammar
 maalr.navi.suggest=New Entry
@@ -34,7 +34,7 @@ maalr.login.linkedin=Sign in with LinkedIn
 maalr.login.twitter=Sign in with Twitter
 maalr.login.facebook=Sign in with Facebook
 maalr.login.persona=Sign in with Persona
-maalr.index_page.title=DEVOCHDELI
+maalr.index_page.title=DEVOCHDELIA
 maalr.login_page.title=Login
 maalr.dict_title={0} Dictionary
 maalr.dict_title_ext={0} Dictionary - '{1}' to '{2}'
@@ -50,16 +50,16 @@ maalr.indexLang.spanish=Spanish
 maalr.indexLang.lemma=Lema
 maalr.indexLang.content=Contenido
 
-main.title=About DEVOCHDELI
-main.content=This webiste holds an electronic version of the 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas' (DEVOCHDELI) composed by Rudolf Lenz.<br> A printed version from 1910 was <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitized</a>, OCR read and partially corrected.<br>DEVOCHDELI contains 1661 entries... TODO
+main.title=About DEVOCHDELIA
+main.content=This webiste holds an electronic version of the 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas Americanas' (DEVOCHDELIA) composed by <a href='https://es.wikipedia.org/wiki/Rodolfo_Lenz'>Rodolfo Lenz</a>.<br> A printed version from 1910 was <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitized</a>, OCR read and partially corrected.<br>DEVOCHDELIA contains 1661 entries. 1000 have been partially corrected and the rest are waiting to be corrected!
 
 entry.title=Structure of an entry
-entry.img=Figure 1 - The entry 'cuico' in DEVOCHDELI
-entry.explanation=An entry can be divided into four columns:<br><br><ul><li>On the first column (1) you can see the lemma of an entry.</li> <li>On the second column (2) you can see the content of an entry</li> <li>On the third column (3) on an orange square the percentage of correction of an entry</li> <li>On the fourth column (4) a button for editing the entry</li><li>On the fifth column (5) a button for seeing the scans of the original printed version related to the entry</li> </ul>
+entry.img=Figure 1 - The entry 'cuico' in DEVOCHDELIA
+entry.explanation=An entry can be divided into four columns:<br><br><ul><li>The first column (1) contains the lemma</li> <li>On the second column (2) you can see its content</li> <li>The third column (3) contains the percentage of correction</li> <li>The fourth column (4) contains a button for opening the entry's editor</li><li>The fifth column (5) contains a button for seeing the scans of the print edition</li> </ul>
 
 edit.title=Editing an entry
-edit.img=Figure 2 - DEVOCHDELI entry's editor
-edit.explanation=After clicking on the button for editing an entry ((4) on Figure 2) you will see the editor on a popup window.<br> The you can edit the fields Lemma and Content. For editing in content you can use the edit-bar above the field.<br> If you make any changes, you need to set a new correction value, that has to be between 15 and 100. 15 represents the lowest scale of correction and 100 the highest.<br> If you don't set a new correction value, your changes will not be saved.
+edit.img=Figure 2 - DEVOCHDELIA entry's editor
+edit.explanation=Once the editor is open, you can edit the fields containing lemma and content. For editing the content you can use the text toolbar.<br> If you make any changes, you need to set a new correction value, in a range between 15 and 100.<br> <b>If you don't set a new correction value, your changes will not be saved!</b>
 
 
 
