i18n text_es up

--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
@@ -54,7 +54,7 @@ main.content= Este sitio web contiene una versión electrónica del 'Diccionario
 
 entry.title=Estructura de una entrada
 entry.img=Figure 1 - La entrada 'cuico' en DEVOCHDELIA
-entry.explanation=Una entrada puede ser dividida en cinco columnas:<br><br><ul><li>La primera columna (1) contiene el lema</li> <li>En la segunda columna (2) puede ver el contenido</li> <li>La tercera columna (3) contiene el porcentaje de corrección</li> <li>La cuarta columna (4) contiene el botón para abrir el editor de entradas</li><li>La quinta columna (5) contiene el botón para acceder a la imagen de la versión impresa</li> </ul>
+entry.explanation=Una entrada se divide en cinco columnas:<br><br><ul><li>La primera columna (1) contiene el lema</li> <li>En la segunda columna (2) puede ver el contenido</li> <li>La tercera columna (3) contiene el porcentaje de corrección</li> <li>La cuarta columna (4) contiene el botón para abrir el editor de entradas</li><li>La quinta columna (5) contiene el botón para acceder a la imagen de la versión impresa</li> </ul>
 
 edit.title=Editar una entrada
 edit.img=Figure 2 - Editor de entradas del DEVOCHDELIA
