i18n up for search mask

--- a/maalr.lenz/maalr_config/i18n/user-searchui_es.properties
+++ b/maalr.lenz/maalr_config/i18n/user-searchui_es.properties
@@ -1,4 +1,4 @@
-searchPhrase=Búsqueda
+searchPhrase=
 searchPhrase_submit=Buscar
 highlight=Destacar búsqueda
 suggestions=Mostrar entradas editadas
@@ -20,8 +20,8 @@ exact=exacto
 soft=soft
 normal=estándar
 
-more_options=Más opciones...
-less_options=Menos opciones...
+more_options=
+less_options=
 
 pageSize=Resultados
 15=15
