--- a/maalr.lenz/maalr_config/i18n/user-searchui.properties
+++ b/maalr.lenz/maalr_config/i18n/user-searchui.properties
@@ -1,4 +1,4 @@
-searchPhrase=Search term
+searchPhrase=
 searchPhrase_submit=Search
 highlight=Highlight search term
 suggestions=Show edited entries
@@ -19,8 +19,8 @@ exact=Exact
 soft=soft
 normal=Standard
 
-more_options=More Options...
-less_options=Less Options...
+more_options=
+less_options=
 
 pageSize=Results
 15=15
