--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_es.properties
@@ -46,16 +46,16 @@ maalr.langSelect.spanish=español
 maalr.langSelect.english=inglés
 maalr.indexLang.spanish=español
 maalr.indexLang.english=inglés
-maalr.indexLang.lemma=Lemma
-maalr.indexLang.content=Content
+maalr.indexLang.lemma=Lema
+maalr.indexLang.content=Definición
 
 main.title=Acerca del DEVOCHDELIA
-main.content= Este sitio web contiene una versión electrónica del 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas Americanas' (DEVOCHDELIA) redactado por <a href='https://es.wikipedia.org/wiki/Rodolfo_Lenz'>Rodolfo Lenz</a>.<br> Una edición impresa en 1910 ha sido <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitalizada</a>, sus caracteres reconocidos (OCR) y parcialmente corregida.<br>DEVOCHDELIA contiene 1661 entradas. 1000 han sido parcialmente corregidas y el resto está esperando a ser completamente corregidas.
+main.content= Este sitio web contiene una versión electrónica del 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas Americanas' (DEVOCHDELIA) redactado por <a href='https://es.wikipedia.org/wiki/Rodolfo_Lenz'>Rodolfo Lenz</a>.<br> Una edición impresa en 1910 ha sido <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitalizada</a>, sus caracteres reconocidos (OCR) y parcialmente corregida.<br>El DEVOCHDELIA tiene 1661 entradas. 1000 han sido parcialmente corregidas y esperamos que nos ayude a corregir las restantes.
 
 entry.title=Estructura de una entrada
 entry.img=Figure 1 - La entrada 'cuico' en DEVOCHDELIA
-entry.explanation=Una entrada se divide en cinco columnas:<br><br><ul><li>La primera columna (1) contiene el lema</li> <li>En la segunda columna (2) puede ver el contenido</li> <li>La tercera columna (3) contiene el porcentaje de corrección</li> <li>La cuarta columna (4) contiene el botón para abrir el editor de entradas</li><li>La quinta columna (5) contiene el botón para acceder a la imagen de la versión impresa</li> </ul>
+entry.explanation=Una entrada se divide en cinco columnas:<br><br><ul><li>La primera columna (1) contiene el lema</li> <li>En la segunda columna (2) se encuentra la definición</li> <li>La tercera columna (3) contiene el porcentaje de corrección</li> <li>En la cuarta columna (4) se encuentra el botón para abrir el editor de entradas</li><li>La quinta columna (5) contiene el botón para acceder a la fuente original (versión impresa)</li> </ul>
 
 edit.title=Editar una entrada
 edit.img=Figure 2 - Editor de entradas del DEVOCHDELIA
-edit.explanation=Una vez abierto el editor, puede editar los campos que contienen el lema y el contenido. Para editar el contenido, puede usar la barra de herramientas de texto.<br>Si realiza cambios, tiene que ingresar un nuevo valor de corrección en un rango entre 16 y 100.<br> <b>¡Si no ingresa un nuevo valor de corrección, sus modificaciones no serán guardadas!</b>
+edit.explanation=Una vez abierto el editor, puede editar los campos que contienen el lema y la definición. Si desea, puede usar la barra de herramientas de texto para editar la definición.<br>Para guardar su edición, tiene que ingresar un nuevo valor de corrección entre 16 y 100.<br> <b>Si no ingresa un nuevo valor de corrección, ¡sus modificaciones no serán guardadas!</b>
