--- a/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
+++ b/maalr.gwt/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
@@ -47,19 +47,19 @@ maalr.langSelect.spanish=Spanish
 maalr.langSelect.english=English
 maalr.indexLang.english=English
 maalr.indexLang.spanish=Spanish
-maalr.indexLang.lemma=Lema
-maalr.indexLang.content=Contenido
+maalr.indexLang.lemma=Lemma
+maalr.indexLang.content=Definition
 
 main.title=About DEVOCHDELIA
 main.content=This webiste holds an electronic version of the 'Diccionario Etimológico de las Voces Chilenas Derivadas de las Lenguas Indígenas Americanas' (DEVOCHDELIA) composed by <a href='https://es.wikipedia.org/wiki/Rodolfo_Lenz'>Rodolfo Lenz</a>.<br> A printed version from 1910 was <a href='http://www.ub.uni-koeln.de/cdm/ref/collection/mono20/id/6705'>digitized</a>, OCR read and partially corrected.<br>DEVOCHDELIA contains 1661 entries. 1000 have been partially corrected and the rest are waiting to be corrected!
 
 entry.title=Structure of an entry
 entry.img=Figure 1 - The entry 'cuico' in DEVOCHDELIA
-entry.explanation=An entry can be divided into four columns:<br><br><ul><li>The first column (1) contains the lemma</li> <li>On the second column (2) you can see its content</li> <li>The third column (3) contains the percentage of correction</li> <li>The fourth column (4) contains a button for opening the entry's editor</li><li>The fifth column (5) contains a button for seeing the scans of the print edition</li> </ul>
+entry.explanation=An entry can be divided into four columns:<br><br><ul><li>The first column (1) contains the lemma</li> <li>On the second column (2) you can see its definition</li> <li>The third column (3) contains the percentage of correction</li> <li>The fourth column (4) contains a button for opening the entry's editor</li><li>The fifth column (5) contains a button for seeing the scans of the print edition</li> </ul>
 
 edit.title=Editing an entry
 edit.img=Figure 2 - DEVOCHDELIA entry's editor
-edit.explanation=Once the editor is open, you can edit the fields containing lemma and content. For editing the content you can use the text toolbar.<br> If you make any changes, you need to set a new correction value, in a range between 16 and 100.<br> <b>If you don't set a new correction value, your changes will not be saved!</b>
+edit.explanation=Once the editor is open, you can edit the fields containing lemma and definition. For editing the definition you can use the text toolbar.<br> If you make any changes, you need to set a new correction value, in a range between 16 and 100.<br> <b>If you don't set a new correction value, your changes will not be saved!</b>
 
 
 
