new structure info up

--- a/maalr.lenz/maalr_config/i18n/lemma-description.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description.properties
@@ -1,5 +1,5 @@
-lemma=Lemma
-content=Content
+header=Header
+body=Body
 correction=Correction
 
 redirect_b=Link
@@ -25,7 +25,7 @@ dialog.comment.header=Comments or questions
 dialog.comment.placeholder=Use this field for letting us know your questions or comments. If you want to be contacted per e-mail, give us your address
 dialog.email.header=e-mail address
 dialog.email.placeholder=Write your e-mail address here
-maalr.query.results={0} (Results {1} from {2} to {3})
+maalr.query.results={0} delivers {3} result(s)
 maalr.query.nothing_found=Searching after "{0}" returned no results
 maalr.query.result_modify=Edit
 maalr.query.result_see_source=Source
@@ -42,8 +42,8 @@ editor.modify.subtitle=Edit entry
 editor.suggest.subtitle=
 editor.suggest.title=New Entry
 
-header.modify=DEVOCHDELI
-header.suggest=DEVOCHDELI
+header.modify=DEVOCHDELIA
+header.suggest=DEVOCHDELIA
 
 mail.subject=Your questions
 
