--- a/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
+++ b/maalr.lenz/maalr_config/i18n/lemma-description_es.properties
@@ -1,5 +1,5 @@
-lemma=Lema
-content=Contenido
+header=Encabezado
+body=Cuerpo
 correction=Corrección
 
 redirect_b=Enlace
@@ -25,7 +25,7 @@ dialog.comment.header=Preguntas o comentarios
 dialog.comment.placeholder=Escriba en este campo sus preguntas o comentarios. Si sedes ser contactado por correo electrónico, escriba su dirección 
 dialog.email.header=Correo electrónico
 dialog.email.placeholder=Escriba su dirección de correo electrónico aquí­
-maalr.query.results={0} (Resultados {1} de {2} a {3})
+maalr.query.results={0} arroja {3} resultado(s)
 maalr.query.nothing_found=La búsqueda de "{0}" no entregó resultados
 maalr.query.result_modify=Editar
 maalr.query.result_see_source=Fuente
@@ -45,7 +45,7 @@ editor.modify.subtitle=Editar entrada
 editor.suggest.subtitle=
 editor.suggest.title=Nueva entrada
 
-header.modify=DEVOCHDELI
-header.suggest=DEVOCHDELI
+header.modify=DEVOCHDELIA
+header.suggest=DEVOCHDELIA
 
 mail.subject=Sus preguntas
