--- a/maalr.lenz/maalr_config/i18n/user-searchui_en.properties
+++ b/maalr.lenz/maalr_config/i18n/user-searchui_en.properties
@@ -4,14 +4,14 @@ highlight=Highlight search term
 suggestions=Show edited entries
 
 language=Search over:
-lemma=Lemma
-content=Content
-both=Both
+header=Header
+body=Body
+both=Header and Body
 english=English
 castellano=Spanish
 
 
-method=Method
+method=Method:
 prefix=Prefix
 intern=Overall
 suffix=Suffix
