--- a/maalr.lenz/maalr_config/i18n/user-searchui_es.properties
+++ b/maalr.lenz/maalr_config/i18n/user-searchui_es.properties
@@ -1,20 +1,21 @@
 searchPhrase=
 searchPhrase_submit=Buscar
 highlight=Destacar búsqueda
-suggestions=Mostrar entradas editadas
+suggestions=Ver entradas editadas
 
 
 language=Buscar en:
-lemma=lema
-content=contenido
+header=encabezado
+body=cuerpo
+both=encabezado y cuerpo
 english=inglés
 spanish=español
-both=ambos
 
 
-method=método
+
+method=Método de búsqueda:
 prefix=prefijo
-intern=todo
+intern=interno
 suffix=sufijo
 exact=exacto
 soft=soft
