--- a/maalr.mackenzie/maalr_config/i18n/lemma-description_en.properties
+++ b/maalr.mackenzie/maalr_config/i18n/lemma-description_en.properties
@@ -1,5 +1,5 @@
-ELemma=Englisch
-MPLemma=Mittelpersisch
+ELemma=English
+MPLemma=Middle Persian
 
 redirect_b=Verknüpfung
 suggest.title=Fehlt etwas?
@@ -29,7 +29,6 @@ german=Deutsch
 english=Englisch
 persian=Persisch
 middle_persian=Mittelpersisch
-
 
 maalr.query.result_title=Ergebnisse für {0}
 dict.lang1_lang2=Englisch-Mittelpersisch
