--- a/maalr.mackenzie/maalr_config/i18n/user-searchui_de.properties
+++ b/maalr.mackenzie/maalr_config/i18n/user-searchui_de.properties
@@ -4,13 +4,9 @@ highlight=Suchbegriff hervorheben
 suggestions=Auch neue Vorschläge anzeigen
 
 language=Sprache
-german=Deutsch
-russian=Russisch
+english=Englisch
+middle_persian=Mittelpersisch
 both=Beide
-
-gender=Genus
-german_gender=Genus (D)
-russian_gender=Genus (R)
 
 method=Methode
 prefix=Anfang
@@ -23,10 +19,6 @@ normal=Standard
 more_options=Mehr Optionen...
 less_options=Weniger Optionen...
 
-grammar=Grammatik
-category=Kategorie
-subSemantics=Semantik
-aspect=Aspekt
 pageSize=Anzahl der Ergebnisse
 15=15
 25=25
