--- a/maalr.mackenzie/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_de.properties
+++ b/maalr.mackenzie/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_de.properties
@@ -9,6 +9,7 @@ maalr.query.search=Suche
 maalr.user.login=Anmelden
 maalr.user.logout={0} abmelden
 maalr.navi.alphabet=a - z
+maalr.navi.about=Über das Wörterbuch
 maalr.navi.search=Suche
 maalr.navi.dictionary=Wörterbuch
 maalr.navi.help=Hilfe
@@ -42,11 +43,10 @@ maalr.dict.entry_header=Übersetzungen von
 maalr.footer.maalr=Provided by Maalr
 maalr.footer.uni_cologne=Universität zu Köln
 maalr.index.last_update=Letzte Aktualisierung: {0}
-maalr.index.entry_count={0} Einträge
-maalr.langSelect.romansh=rumantsch
-maalr.langSelect.russian=russisch
-maalr.langSelect.german=deutsch
-maalr.indexLang.romansh=rumantsch
-maalr.indexLang.russian=russisch
-maalr.indexLang.german=deutsch
+maalr.langSelect.persian=Persisch
+maalr.langSelect.german=Deutsch
+maalr.langSelect.english=Englisch
+maalr.indexLang.persian=Persisch
+maalr.indexLang.german=Deutsch
+maalr.indexLang.english=Englisch
 maalr.signin.with=Anmelden mit
