--- a/maalr.mackenzie/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
+++ b/maalr.mackenzie/src/main/resources/de/uni_koeln/spinfo/maalr/webapp/i18n/text_en.properties
@@ -9,6 +9,7 @@ maalr.query.search=Search
 maalr.user.login=Login
 maalr.user.logout={0} Logout
 maalr.navi.alphabet=a - z
+maalr.navi.about=About
 maalr.navi.search=Search
 maalr.navi.dictionary=Dictionary
 maalr.navi.help=Help
@@ -16,7 +17,6 @@ maalr.navi.info=Info
 maalr.navi.plugin=Plug-In
 maalr.navi.grammatica=Grammar
 maalr.navi.suggest=New Entry
-maalr.navi.help=Help
 maalr.query.noresults_header=No results found for '{0}'.
 maalr.query.noresults_hint=Click on 'New Entry' to suggest a translation, or modify your search.
 maalr.misc.requires_js=This function requires JavaScript. Please enable JavaScript in your brower.
@@ -43,12 +43,10 @@ maalr.footer.maalr=Provided by Maalr
 maalr.footer.uni_cologne=University of Cologne
 maalr.index.last_update=Last Modified: {0}
 maalr.index.entry_count={0} Entries
-maalr.langSelect.romansh=romansh
-maalr.langSelect.russian=russian
-maalr.langSelect.german=german
-maalr.langSelect.english=english
-maalr.indexLang.romansh=romansh
-maalr.indexLang.russian=russian
-maalr.indexLang.german=german
-maalr.indexLang.english=english
+maalr.langSelect.persian=Persian
+maalr.langSelect.german=German
+maalr.langSelect.english=English
+maalr.indexLang.persian=Persian
+maalr.indexLang.german=German
+maalr.indexLang.english=English
 maalr.signin.with=sign in with
